<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.DetailedKitsuFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/fon_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/back"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="14dp"
                app:cardCornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/art_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_1999"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anime_name"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:text="@string/add_to_library"
                        android:textSize="20sp"
                        app:cornerRadius="10dp" />

                    <ImageView
                        android:id="@+id/kebab_menu"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/kebeb_menu" />
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/detai_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p3itugp39ehfjpomsxrdyctfuvgyibuhonijpxrdcytfuvgyibuhonijpmokxrdctfoxrdctfvgybhunjimokesxdrctfvgybhunjimrxdmkl_rxdctfokrdctfvgybuhnjimkesxrdctfvgybhunjixrdctfvgybhunij"
                    android:textSize="20sp" />
            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/view_more"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/stroke_raunder"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="Kitsy Score"
                        android:textColor="@color/gray"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="89%"
                        android:textSize="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@color/white_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rank_30"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rating"
                            android:textColor="@color/white_gray"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@color/white_gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rank_30"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/rating"
                            android:textColor="@color/white_gray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/gray"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/pirate"
                    android:textSize="14sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/pirate"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>